--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "dev": "next dev",
+    "dev": "next dev --port=4000",
     "dev:functions": "netlify dev",
     "build": "next build",
     "start": "next start",
