--- a/package.json
+++ b/package.json
@@ -10,18 +10,22 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "@netlify/functions": "^2.6.0",
-    "@supabase/supabase-js": "^2.42.4",
+    "@netlify/functions": "2.6.0",
+    "@supabase/supabase-js": "2.42.4",
     "next": "14.2.1",
-    "react": "^18",
-    "react-dom": "^18"
+    "react": "18",
+    "react-dom": "18"
   },
   "devDependencies": {
-    "@types/node": "^20",
-    "@types/react": "^18",
-    "@types/react-dom": "^18",
-    "eslint": "^8",
+    "@types/node": "20",
+    "@types/react": "18",
+    "@types/react-dom": "18",
+    "autoprefixer": "10.4.19",
+    "daisyui": "4.10.2",
+    "eslint": "8",
     "eslint-config-next": "14.2.1",
-    "typescript": "^5"
+    "postcss": "8.4.38",
+    "tailwindcss": "3.4.3",
+    "typescript": "5"
   }
 }
