--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "private": true,
   "scripts": {
     "dev": "next dev --port=4000",
-    "dev:functions": "netlify dev",
+    "dev:functions": "netlify dev --port=4001",
     "build": "next build",
     "start": "next start",
     "lint": "next lint"
