--- a/package.json
+++ b/package.json
@@ -3,10 +3,11 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "dev": "next dev --port=4000",
+    "dev": "yarn generate-types && next dev --port=4000",
     "dev:functions": "netlify dev --port=4001",
     "build": "next build",
     "start": "next start",
+    "generate-types": "supabase gen types typescript --project-id vikfaeunbkpbeaxdydoj > supabase/database.d.ts",
     "lint": "next lint"
   },
   "dependencies": {
