--- a/netlify.toml
+++ b/netlify.toml
@@ -1,3 +1,11 @@
 [dev]
 port = 8888 # The port that the netlify dev will be accessible on
 targetPort=4000
+
+[build]
+  functions = "netlify/functions"
+
+[[redirects]]
+  from = "/api/*"
+  to = "/.netlify/functions/:splat"
+  status = 200
