--- a/package.json
+++ b/package.json
@@ -3,16 +3,14 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "dev": "yarn generate-types && next dev --port=4000",
+    "dev": "next dev --port=4000",
     "dev:functions": "netlify dev --port=4001",
     "build": "next build",
     "start": "next start",
-    "generate-types": "supabase gen types typescript --project-id vikfaeunbkpbeaxdydoj > supabase/database.d.ts",
     "lint": "next lint"
   },
   "dependencies": {
     "@netlify/functions": "2.6.0",
-    "@supabase/supabase-js": "2.42.4",
     "next": "14.2.1",
     "react": "18",
     "react-dom": "18"
