--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
     "@netlify/functions": "2.6.0",
     "next": "14.2.1",
     "react": "18",
-    "react-dom": "18"
+    "react-dom": "18",
+    "tone": "15.0.4"
   },
   "devDependencies": {
     "@types/node": "20",
