--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "packageManager": "yarn@1.22.19",
   "scripts": {
     "dev:web": "turbo run dev --filter=web",
+    "dev:native": "turbo run dev --filter=native",
     "build": "turbo run build"
   },
   "devDependencies": {
