--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "tuning",
   "version": "1.0.0",
   "main": "index.js",
+  "private": true,
   "workspaces": [
     "apps/*",
     "packages/*"
