--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   "scripts": {
     "dev:web": "turbo run dev --filter=web",
     "dev:native": "turbo run dev --filter=native",
+    "dev:shared": "turbo run dev --filter=@tuning/shared",
     "build": "turbo run build"
   },
   "devDependencies": {
