--- a/package.json
+++ b/package.json
@@ -15,7 +15,7 @@
     "dev:web": "turbo run dev --filter=web",
     "dev:native": "turbo run dev --filter=native",
     "dev:shared": "turbo run dev --filter=@tuning/shared",
-    "build": "turbo run build"
+    "build:web": "turbo run build --filter=web"
   },
   "devDependencies": {
     "turbo": "2.5.4"
