--- a/.vscode/settings.default.json
+++ b/.vscode/settings.default.json
@@ -6,5 +6,13 @@
   "editor.tabSize": 2,
   "editor.insertSpaces": true,
   "files.trimTrailingWhitespace": true,
-  "editor.defaultFormatter": "esbenp.prettier-vscode"
+  "editor.defaultFormatter": "esbenp.prettier-vscode",
+  "emeraldwalk.runonsave": {
+        "commands": [
+            {
+                "match": ".lua",
+                "cmd": "./apps/playdate/build.sh"
+            }
+        ]
+    }
 }
